EP-4946 (#1661)